# schengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
cmake/: conan.cmake
source/app/: xmain.cpp
source/version/: version.cpp  version.h
submodules/: CMakeLists.txt
